# sphinx-automodapi-duplicated-warning

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  foo.rst  index.rst
