[tool.poetry]
name = "duplicated"
version = "0.1.0"
description = "Minimal Example For automodapi duplicated object description"
authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.5.0"
sphinx-automodapi = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
